syntax = "proto3";

package pretto.v1;

// import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

service UserService {
  rpc FetchAll(FetchAllRequest) returns (FetchAllResponse);
}


message FetchAllRequest {}

message FetchAllResponse {
  repeated User users = 1; // La liste des utilisateurs
}

message User { // Un utilisateur enregistré sur l'application
  uint64 id = 1; // l'identifiant unique de l'utilisateur
  string username = 2; // l'identifiant de communication avec l'utilisateur
  string email = 3; // l'email de l'utilisateur
  google.protobuf.Timestamp created_at = 4; // La date-heure à laquelle l'utilisateur a été ajouté au système
}
